--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda</title>
-  <link rel="stylesheet" href="../css/landing.css">
+  <link rel="stylesheet" href="css/landing.css">
+  <link rel="stylesheet" href="css/commons.css">
 </head>
 
-<header class = "header">
+<header class = "navbar">
 	<nav class="h-izquierda">
 		<img> Logo
-		<a href="#"> Catalogo </a>
+		<a href="catalogo_de_productos.html"> Catalogo </a>
 		<a href="#"> Quienes somos </a>
 		<a href="#"> Contactanos </a>
 	</nav>
@@ -32,7 +33,9 @@
         Aliquam erat volutpat. Donec molestie nisi enim, ut vulputate eros mollis non. 
         Nunc dictum purus mi, nec vehicula purus egestas non.
       </p>
-      <button class="btn">Catálogo</button>
+      <a href="catalogo_de_productos.html">
+        <button class="btn">Catálogo</button>
+      </a>
     </div>
   </section>
 
@@ -133,7 +136,7 @@
 		<p style="color: white;">Otro</p>
 		<a href="#" style="color: white;">Loren ipsum</a>
 		<a href="#" style="color: white;">Loren ipsum</a>
-		<a href="#" style="color: white;">Loren ipsum</a>
+		<a href="atencion_al_cliente.html" style="color: white;">Loren ipsum</a>
 	</nav>
 </footer>
 
